--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,15 @@
-# Core dependencies
-pandas>=2.0.0
-numpy>=1.24.0
-requests>=2.31.0
-python-dateutil>=2.8.2
+# Core dependencies - REQUIRED
+pandas>=2.0.0           # CSV processing and data manipulation
+numpy>=1.24.0           # Numerical operations
+requests>=2.31.0        # API calls (eBird, GBIF, OSM, Open-Meteo)
+pydantic>=2.0.0         # Configuration validation
 
-# API clients
-urllib3>=2.0.0
+# Web interface - OPTIONAL (only if using web_app.py)
+flask>=2.0.0            # Web server
 
-# ML and scientific computing
-scikit-learn>=1.3.0
-scipy>=1.11.0
+# Visualization - OPTIONAL (only if generating dashboards)
+plotly>=5.0.0           # Interactive charts
+matplotlib>=3.5.0       # Static charts
 
-# Audio processing (optional, for spectrogram generation)
-librosa>=0.10.0
-matplotlib>=3.7.0
-
-# Caching
-joblib>=1.3.0
-
-# Configuration
-pydantic>=2.0.0
-python-dotenv>=1.0.0
-
-# Testing
-pytest>=7.4.0
-pytest-cov>=4.1.0
-
-# Progress bars
-tqdm>=4.66.0
+# Machine learning - OPTIONAL (only if using weather model)
+scikit-learn>=1.0.0     # Smart review selection
